# TALight

./: .gitignore  LICENSE  README.md  SETUP.md  TODO.md  magix_index.py
TAL_lib/Java/: Env.java  README.md  TALcolors.java  TALinputs.java
TAL_lib/python/: TAL_DAGs.py  TAL_make_catalogue.py  TALfiles.py  TALinputs.py  bot_file_exchange_sym_interface.py  bot_file_exchange_sym_interface_another_version.py  bot_interface.py  bot_lib.py  get_tables.py  math_modeling.py  multilanguage.py  test_run_with_deadline.py  turing_machine_lib.py
TAL_utils/: TA_send_txt_file.py
TAL_utils/encription/: genera_chiavi.py
TAL_utils/problem_maker/: TAL_gen_instances.py  TAL_make_catalogue.py  synopsisc.py
TAL_utils/problem_solver/: TA_receive_files_bot.py  TA_send_files_bot.py  TA_send_txt_file.py  TA_transfer_files_bot.py  bot_interface.py  bot_lib.py
TALight/: DockerfileDeploy  TALight.sln  deploy.bash  docker-compose.yml
TALight/TALight/: Constant.cs  Engine.cs  LoadCache.cs  Options.cs  Program.cs  Setting.cs  TALight.csproj  Utilities.cs
TALight/TALightBench/: Program.cs
TALight/TALightObjects/: ConnectInfo.cs  Token.cs  (+5 more)
algo/: FBF_trasparenti  binary_search  board2tok  campo_minato  collage  connected_components  eggs  euler_dir  game_chococroc  game_eat_left_or_right  gioco  gioco_eat_left_or_right  griglia  increasing_subseq  interval_sum  interval_sum2d  interval_sum2d_dyn  interval_sum_dyn  knapsack  lcs  matita  mutually_unreachable  nim2  nuggets  parentheses  piastrelle  piastrelle1xn_count  piastrelle1xn_rank  piastrelle1xn_unrank  pills  pirellone  quanti_poldo  ricerca_binaria  slalom  specchio  tiling_mxn-boards_with_1x2-boards  triangle  triangolo_count_opt_sol  triangolo_game_play  triangolo_game_val  (+4 more)
applets/: proto.html  sum-protoapplet.html
exam_sessions/: course_test.yaml  current_status.yaml  exam_RO_test.yaml  exam_test.yaml
example_problems/: prova_UTF8.py
mastermind/: meta.yaml  statement.it.md
possibili_progetti/: gestione_metafile
possibilities/: argomenti_consistncy_check  argomenti_vettori  gestione_metafile  help_of_rtal  ipotesi_nomenclatura_errori
problem_with_universal_services/: meta.yaml
problems/: the_prime_factorization
rtal/: .gitignore  .rustfmt.toml  Cargo.toml  README.md
rtal/src/: check.rs  client.rs  connection.rs  master.rs  problem.rs  proto.rs  py.rs  server.rs  util.rs
starship/: starship-no-nerd-fonts.toml  starship.toml
sum/: observe.py  solve.py
tal_algo/: README  TAL_lib  universal_services
tiling_mxn-boards_with_1x2-boards/: eval_submission.en.yaml  eval_submission.it.yaml  meta.yaml  problem.yaml  statement.en.md  statement.it.md  test_problem_consistency.py  yield_random_tiling.py  yield_random_tiling.yaml
universal_services/: help_server.py  multilanguage.py
(+3803 files in other folders)
