[package]
name = "rtal"
version = "0.1.0"
authors = ["Dario Ostuni <dario.ostuni@gmail.com>"]
edition = "2018"

[[bin]]
name="rtal"
path="src/client.rs"

[[bin]]
name="rtald"
path="src/server.rs"

[[bin]]
name="rtalc"
path="src/check.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1"
serde_regex = "1"
regex = "1"
clap = { version = "3.0.0-beta.4", features = ["regex"] }
log = "0.4"
pretty_env_logger = "0.4"
tar = "0.4"
sha2 = "0.9"
url = "2"
rustls = "0.19"
webpki-roots = "0.21"
webpki = "0.21"
termcolor = "1"
fwdansi = "1"
path-absolutize = "3"

[dependencies.tungstenite]
version = "0.13"
default-features = false
