[package]
name = "rtal"
version = "0.2.1"
authors = ["Dario Ostuni <dario.ostuni@gmail.com>"]
edition = "2021"

[[bin]]
name="rtal"
path="src/client.rs"

[[bin]]
name="rtalc"
path="src/check.rs"

[[bin]]
name="rtald"
path="src/server.rs"

[dependencies]
clap = { version = "3", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
#tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-subscriber = "0.3"
tokio-tungstenite = { version = "0.16", features = ["connect", "rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
serde_regex = "1"
path-absolutize = "3"
regex = "1"
futures-util = "0.3"
tokio-tar = "0.3"
sanitize-filename = "0.3"
twox-hash = "1"
tempfile = "3"
chrono = "0.4"

[target.'cfg(unix)'.dependencies]
nix = "0.23"
