[package]
name = "rtal"
version = "0.2.4"
authors = ["Dario Ostuni <dario.ostuni@gmail.com>"]
edition = "2021"

[[bin]]
name="rtal"
path="src/client.rs"

[[bin]]
name="rtalc"
path="src/check.rs"

[[bin]]
name="rtald"
path="src/server.rs"

[lib]
name="pyrtal"
path="src/py.rs"
crate-type = ["cdylib"]

[dependencies]
clap = { version = "3", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tungstenite = { version = "0.17", features = ["rustls-tls-webpki-roots"] }
tokio-tungstenite = { version = "0.17", features = ["connect", "rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
serde_regex = "1"
path-absolutize = "3"
regex = "1"
futures-util = "0.3"
tokio-tar = "0.3"
sanitize-filename = "0.4"
tempfile = "3"
chrono = "0.4"
pyo3 = { version = "0.16", features = ["extension-module"], optional = true }
pythonize = { version = "0.16", optional = true }
sha2 = "0.10"

[features]
python = ["dep:pyo3", "dep:pythonize"]

[target.'cfg(unix)'.dependencies]
nix = "0.24"
